k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc-eci
  labels:
    app.kubernetes.io/managed-by: kubectl
